scull: Makefile use ccflags-y
EXTRA_CFLAGS is deprecated

Signed-off-by: Wayne Porter <wporter82@gmail.com>

--- a/scull/Makefile
+++ b/scull/Makefile
@@ -11,8 +11,8 @@ endif
 
 LDDINC=$(PWD)/../include
 
-EXTRA_CFLAGS += $(DEBFLAGS)
-EXTRA_CFLAGS += -I$(LDDINC)
+ccflags-y += $(DEBFLAGS)
+ccflags-y += -I$(LDDINC)
 
 ifneq ($(KERNELRELEASE),)
 # call from kernel build system
